<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_questions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SPListFinish"
        android:id="@+id/ListFinish_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="Tap the question to answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/TextView1"/>
        <TextView
            android:text="Correct = 1 point, Incorrect = 0 point, Cheat = 0 point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/TextView2"/>

        <TextView
            android:text="To SKIP question, leave the question unanswered."
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/Q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/SPListQ1"/>
        <TextView
            android:text="@string/Q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:id="@+id/SPListQ2"/>

        <TextView
            android:text="@string/Q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:id="@+id/SPListQ3"/>

        <TextView
            android:text="@string/Q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:id="@+id/SPListQ4"/>

        <TextView
            android:text="@string/Q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:id="@+id/SPListQ5"/>

        <TextView
            android:text="@string/Q6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:id="@+id/SPListQ6"/>

        <TextView
            android:text="@string/Q7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:id="@+id/SPListQ7"/>

        <TextView
            android:text="@string/Q8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:id="@+id/SPListQ8"/>

        <TextView
            android:text="@string/Q9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:id="@+id/SPListQ9"/>

        <TextView
        android:text="@string/Q10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:id="@+id/SPListQ10"/>

    </LinearLayout>

</RelativeLayout>