<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_reveal_all_answers_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.cyrush.groupxsimplequizapp.RevealAllAnswersPage">

    <TableLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">





        <TextView
            android:text="@string/Q1"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/SPListQ1"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <TextView
            android:text="@string/Q1Reveal"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/Q1Reveal"
            android:textColor="#000000"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:text="@string/Q2"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ2"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/Q2Reveal"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/Q2Reveal"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"/>


        <TextView
            android:text="@string/Q3"
            android:textColor="#006400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ3"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <TextView
            android:text="@string/Q4"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ4"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/Q4Reveal"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/Q4Reveal"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"/>

        <TextView
            android:text="@string/Q5"
            android:textColor="#006400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ5"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />






        <TextView
            android:text="@string/Q6"
            android:textColor="#006400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ6"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



        <TextView
            android:text="@string/Q7"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ7"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/Q7Reveal"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/Q7Reveal"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"/>

        <TextView
            android:text="@string/Q8"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ8"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/Q8Reveal"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/Q8Reveal"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"/>

        <TextView
            android:text="@string/Q9"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ9"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/Q9Reveal"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/Q9Reveal"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"/>


        <TextView
            android:text="@string/Q10"
            android:textColor="#006400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/SPListQ10"
            android:layout_alignTop="@+id/tableLayout2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />




    </TableLayout>


</RelativeLayout>
