<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.cyrush.groupxsimplequizapp.SPFinalConfirmationPage">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <Button
            android:text="@string/SinglePlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/Single_P_Btn"
            android:layout_gravity="center"/>

        <Button
            android:text="@string/MultiplayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/Multi_P_Btn"
            android:layout_gravity="center"/>

        <Button
            android:text="@string/leaderboard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/leaderboardBtn"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>
