<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <Button
            android:text="@string/list_Heading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionList"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/Q7"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/question_TextView"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/MPQ7YesorNoRadioGroup"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioButton
                android:text="Yes"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/yes" />

            <RadioButton
                android:text="No"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/no" />

            <RadioButton
                android:text="@string/cheat_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:id="@+id/radiocheat" />

        </RadioGroup>
    </RelativeLayout>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="30dp"
        android:id="@+id/submit_btn"

        />



</LinearLayout>