<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/MultiplayerP1NameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/p1_TextView"
            android:layout_marginBottom="28dp" />

        <EditText
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/p1_EditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/MultiplayerP2NameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/p2_TextView"
            android:layout_marginBottom="28dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/p2_EditText" />

    </LinearLayout>

    <Button
        android:text="@string/MP_start_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/MP_start_Btn"
        android:clickable="true"
        android:layout_marginBottom="162dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/MP_quit_Btn"
        android:clickable="true"
        android:layout_alignTop="@+id/MP_start_Btn"
        android:layout_alignLeft="@+id/MP_start_Btn"
        android:layout_alignStart="@+id/MP_start_Btn"
        android:layout_marginTop="74dp"/>

</RelativeLayout>